fixing a responsive bug on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -368,7 +368,7 @@ align-items: baseline;
 }
 
 .col-md-4 {
-
+padding: 0px;
 margin-bottom: 2%;
 }
 
